# cpp-dp-2025-09-22

./: CMakeLists.txt  README.md  _vcpkg.json
.devcontainer/: Dockerfile  devcontainer.json
Behavioral/: CMakeLists.txt
Behavioral/Chain.Example/: chain.hpp  main.cpp
Behavioral/Chain.TheoryCode/: chain.hpp  main.cpp
Behavioral/Command.Exercise/: CMakeLists.txt  main.cpp
Behavioral/Command.Exercise/gtests/: CMakeLists.txt  application_tests.cpp  command_tests.cpp  document_tests.cpp
Behavioral/Command.Exercise/gtests/mocks/: mock_command.hpp
Behavioral/Command.Exercise/include/boost/: di.hpp
Behavioral/Command.Exercise/src/: CMakeLists.txt  application.hpp  clipboard.hpp  command.hpp  document.hpp  serializers.hpp
Behavioral/Mediator.TheoryCode/: main.cpp  mediator.hpp
Behavioral/Observer.Exercise/: main.cpp  stock.hpp
Behavioral/Observer.TheoryCode/: main.cpp  observer.hpp
Behavioral/State.Example/: CMakeLists.txt  main.cpp
Behavioral/State.Example/src/: CMakeLists.txt  turnstile.cpp  turnstile.hpp
Behavioral/State.Example/tests/: CMakeLists.txt  turnstile_tests.cpp
Behavioral/State.Exercise/: CMakeLists.txt  main.cpp
Behavioral/State.Exercise/src/: bank_account.cpp  bank_account.hpp
Behavioral/State.Exercise/tests/: CMakeLists.txt  bank_account_tests.cpp
Behavioral/State.TheoryCode/: main.cpp  state.hpp
Behavioral/Strategy.Exercise/: CMakeLists.txt  main.cpp
Behavioral/Strategy.TheoryCode/: main.cpp  strategy.hpp
Behavioral/TemplateMethod.TheoryCode/: main.cpp  template_method.hpp
Behavioral/Visitor.Exercise/: CMakeLists.txt  main.cpp
Behavioral/Visitor.Exercise/src/: ast.hpp  visitors.cpp  visitors.hpp
Behavioral/Visitor.Exercise/tests/: CMakeLists.txt  ast_tests.cpp
Creational/: CMakeLists.txt
Creational/AbstractFactory.Example/: enemy_factory.hpp  game.hpp  main.cpp  monsters.hpp
Creational/AbstractFactory.Exercise/: before.cpp
Creational/AbstractFactory.TheoryCode/: CMakeLists.txt  abstract_factory.hpp  main.cpp
Creational/Builder.Example/: data_builder.txt  data_parser.hpp  main.cpp  report_builder.cpp  report_builder.hpp
Creational/Builder.Example.SP/: CMakeLists.txt  data_parser.hpp  main.cpp  report_builder.cpp  report_builder.hpp
Creational/Builder.TheoryCode/: builder.hpp  main.cpp
Creational/Composite.Builder/: composite_builder.cpp  person.cpp  person.hpp  person_builder.cpp  person_builder.hpp
Creational/FactoryMethod.Example/: CMakeLists.txt  drawing_fm_example.txt  main.cpp  point.hpp  rectangle.cpp  shape.hpp  shape_factories.hpp  square.cpp  square.hpp
Creational/FactoryMethod.Example/shape_readers_writers/: rectangle_reader_writer.cpp  rectangle_reader_writer.hpp  square_reader_writer.cpp
Creational/FactoryMethod.Exercise1/: CMakeLists.txt  before.cpp  employee.cpp  employee.hpp  hrinfo.cpp  hrinfo.hpp
Creational/FactoryMethod.Exercise2/: CMakeLists.txt  circle.cpp  circle.hpp  drawing_fm_exercise1.txt  main.cpp  rectangle.hpp  square.hpp
Creational/FactoryMethod.Exercise2/shape_readers_writers/: circle_reader_writer.cpp  circle_reader_writer.hpp  rectangle_reader_writer.cpp  square_reader_writer.hpp
Creational/FactoryMethod.Intro/: factory.hpp  main.cpp
Creational/Prototype.Exercise/: CMakeLists.txt  circle.cpp  circle.hpp  main.cpp  rectangle.cpp  rectangle.hpp  shape.hpp  shape_factories.hpp  square.hpp
Creational/Prototype.Exercise/shape_readers_writers/: circle_reader_writer.cpp  circle_reader_writer.hpp
Creational/Prototype.Intro/: main.cpp
Creational/Prototype.TheoryCode/: main.cpp  prototype.hpp
Creational/Singleton.TheoryCode/: main.cpp  singleton.hpp
Extra/Decorator.Photo/: CMakeLists.txt  decorator.hpp  main.cpp
Extra/Mediator/: Mediator.pro  main.cpp  mydialog.cpp  mydialog.h  mydialog.hpp  mydialog.ui  quickentrymediator.cpp  quickentrymediator.hpp  ui_mydialog.h
OOP/: CMakeLists.txt
OOP/Delegation/: delegation.cpp
OOP/DynamicStaticPolymorphism/: static_dynamic_poly.cpp
OOP/Inheritance/: inheritance.cpp
OOP/PolymorphicWrappers/: polymorphic_wrappers.cpp  shapes.hpp
Structural/: CMakeLists.txt
Structural/Adapter.Exercise/: CMakeLists.txt  circle.cpp  circle.hpp  drawing_adapter.txt  generic_factory.hpp  main.cpp  paragraph.hpp  point.cpp  rectangle.hpp  shape.hpp  shape_factories.hpp  square.cpp  text.cpp  text.hpp
Structural/Adapter.Exercise/shape_readers_writers/: circle_reader_writer.hpp  rectangle_reader_writer.cpp  square_reader_writer.cpp  square_reader_writer.hpp  text_reader_writer.cpp  text_reader_writer.hpp
Structural/Adapter.TheoryCode/: adapter.hpp  main.cpp
Structural/Bridge.Pimpl/: bitmap.cpp  bitmap.hpp  main.cpp
Structural/Bridge.TheoryCode/: bridge.hpp  main.cpp
Structural/Composite.Exercise/: CMakeLists.txt  circle.cpp  circle.hpp  drawing_composite.txt  main.cpp  point.hpp  rectangle.cpp  rectangle.hpp  shape.hpp  shape_group.cpp  shape_group.hpp  singleton.hpp  square.cpp  square.hpp  text.cpp  text.hpp
Structural/Composite.Exercise/shape_readers_writers/: circle_reader_writer.cpp  circle_reader_writer.hpp  rectangle_reader_writer.hpp  shape_group_reader_writer.cpp  shape_group_reader_writer.hpp  shape_reader_writer.hpp  square_reader_writer.cpp  text_reader_writer.cpp  text_reader_writer.hpp
Structural/Composite.TheoryCode/: composite.hpp  main.cpp
Structural/Decorator.Exercise/: main.cpp  starbugs_coffee.hpp
Structural/Decorator.TheoryCode/: decorator.hpp  main.cpp
Structural/Facade.TheoryCode/: facade.hpp  main.cpp
Structural/Flyweight.Boost/: CMakeLists.txt  main.cpp
Structural/Proxy.TheoryCode/: CMakeLists.txt  drawing1.drw  drawing2.drw  drawing3.drw  main.cpp  proxy.hpp
